2018/11/15 José Miguel Silva Caldeira <miguel@ncdc.pt>

	* The space has been removed after the "onlytrueusers" option. Because it wouldn't work if it was the last or only option.

2018/11/14 José Miguel Silva Caldeira <miguel@ncdc.pt>

	* The NSS module only runs for services configured with the PAM module.

2019/11/8 José Miguel Silva Caldeira <miguel@ncdc.pt>

	* It is now possible to store only the real credentials.
	* You can now send credentials to a file of your choice.

2018/04/6 José Miguel Silva Caldeira <miguel@ncdc.pt>

	* Optimization and cleaning of the project.

2018/04/5 José Miguel Silva Caldeira <miguel@ncdc.pt>

	* I added the "#include <errno.h>" header in the "libnss_log_credentials.c" file to work with CentOS6
	* I improved the "configure.ac" file to find the location of the PAM and NSS modules better.

2017/05/31 José Miguel Silva Caldeira <miguel@ncdc.pt>

	* Find the correct location for the PAM and NSS modules in configure.ac

2017/05/30 José Miguel Silva Caldeira <miguel@ncdc.pt>

	* Add module NSS to capture the passwords of non-existent users.

2017/05/22 José Miguel Silva Caldeira <miguel@ncdc.pt>

	* Organize and make the project available in github.