@@ -1,0 +1,7 @@
+# Generated by authselect on Fri Oct  4 14:38:07 2019
+# Do not modify this file manually.
+
+auth	[success=1 default=ignore]	pam_unix.so nullok_secure
+auth	requisite			pam_deny.so
+auth	required			pam_permit.so
+auth	optional			pam_cap.so 
