@@ -1,5 +1,6 @@
 2018/11/15 José Miguel Silva Caldeira <miguel@ncdc.pt>
 
+	* Many changes to make the configuration look alike on both CentOS and Ubuntu.
 	* The space has been removed after the "onlytrueusers" option. Because it wouldn't work if it was the last or only option.
 
 2018/11/14 José Miguel Silva Caldeira <miguel@ncdc.pt>
